# manipulator_ros2

./: .gitignore
src/master/: CMakeLists.txt  package.xml
src/master/src/: ur5e_bringup.cpp  ur5e_joint_pub.cpp  wsg_bringup.cpp  wsg_pub.cpp
src/shawnlib/: CMakeLists.txt  package.xml
src/shawnlib/include/shawnlib/: user_interface.hpp
src/shawnlib/src/: user_interface.cpp
src/ur5e_controller/: CMakeLists.txt  package.xml
src/ur5e_controller/msg/: ArmTrajctory.msg  JointState.msg
src/ur5e_controller/src/: controller.cpp  path_planner.cpp  ur5e_driver.cpp  ur5e_main.cpp
src/ur5e_controller/src/include/: ur5e_driver.h  ur5e_interface.hpp
src/ur5e_controller/srv/: Bringup.srv
src/ur_driver/: CMakeLists.txt  package.xml
src/ur_driver/include/ur_driver/: ur_communication_RT.h  ur_driver.h
src/ur_driver/src/: ur_communication_RT.cpp
src/wsg_controller/: CMakeLists.txt  package.xml
src/wsg_controller/include/wsg_controller/: user_interface.hpp  wsg_driver.h
src/wsg_controller/src/: user_interface.cpp  wsg_driver.cpp  wsg_main.cpp
src/wsg_controller/srv/: Bringup.srv
